# MAPIL

MAPIL/: CompileTest.sh  MakeDoc.sh  MakeRelease.sh
MAPIL/Automake/: Makefile.am  configure.ac
MAPIL/Automake/Include/: Makefile.am
MAPIL/Automake/Lib/: Makefile.am  Makefile.am.linux
MAPIL/Code/Include/MAPIL/: CrossPlatform.h  MAPIL.h  TChar.h  Type.h
MAPIL/Code/Include/MAPIL/Algorithm/: Caesar.h  LZ.h  XOR.h
MAPIL/Code/Include/MAPIL/Collection/: RingBuffer.hpp
MAPIL/Code/Include/MAPIL/Diag/: Assertion.hpp  Exception.h  Logger.h  MapilException.h  SafeArray.hpp
MAPIL/Code/Include/MAPIL/GUI/: ButtonPressSignal.h  ButtonPushedSignal.h  Control.h  ExposeSignal.h  GLContext.h  GTKGLContext.h  GTKGLWindow.h  GTKGraphicsContext.h  GTKSignalServer.h  GTKWindow.h  GUIDevice.h  GUIFactory.h  GUIResourceManager.hpp  GraphicsContext.h  KeyboardSignal.h  RadioButton.h  Signal.h  SignalServer.h  SizeAllocSignal.h  Widget.h  WinAPIGLContext.h  WinAPIGUIFactory.h  WinAPIGraphicsContext.h  WinAPIMsgProc.h  WinAPIRadioButton.h  WinAPISignalServer.h  WinAPIWindow.h  Window.h
MAPIL/Code/Include/MAPIL/Graphics/: Camera.h  Canvas2D.h  Canvas2DBatch.h  Canvas3D.h  Circle2D.h  ConstNums.h  D3D10GraphicsController.h  D3D10GraphicsFactory.h  D3D10Rectangle3D.h  D3D10Shader.h  D3DAnimModel.h  D3DCamera.h  D3DCanvas2D.h  D3DCanvas3D.h  D3DDirectionalLight.h  D3DGraphicsController.h  D3DGraphicsFactory.h  D3DGraphicsFont.h  D3DLine2D.h  D3DModel.h  D3DNSidedPolygon3D.h  D3DPointLight.h  D3DPointSprite.h  D3DRectangle3D.h  D3DSkinMeshModel.h  D3DSprite.h  D3DTexture.h  DeviceGraphicsResourceManager.hpp  DirectionalLight.h  Frontend.h  GLCamera.h  GLCanvas2D.h  GLCanvas3D.h  GLCircle2D.h  GLDirectionalLight.h  GLGraphicsController.h  GLGraphicsFactory.h  GLGraphicsFont.h  GLLine2D.h  GLModel.h  (+30 more)
MAPIL/Code/Include/MAPIL/IO/: Archiver.h  BMPFile.h  Console.h  File.h  FileFormatAnalyzer.h  FontFile.h  ISocket.h  ISocketFactory.h  ImageFile.h  MQOFile.h  ModelFile.h  PNGFile.h  SocketFactory.h  SoundFile.h  TTFFile.h  WAVFile.h  XAnimFile.h  XFile.h
MAPIL/Code/Include/MAPIL/Input/: ConstNums.h  DIGamepad.h  DIInputFactory.h  DIKeyboard.h  DIMouse.h  Input.h  InputDevice.h  InputFactory.h  InputResourceManager.hpp  Keyboard.h  Mouse.h  WinAPIInputFactory.h  WinAPIKeyboard.h  WinAPIMouse.h
MAPIL/Code/Include/MAPIL/Math/: CollisionDetection.h  FixedPoint.hpp  Matrix.hpp  Point.hpp  Transformation.hpp  Vector.hpp
MAPIL/Code/Include/MAPIL/Sound/: ALListener3D.h  ALSASoundDevice.h  ALSAStaticBuffer.h  ALSoundDevice.h  ALSoundFactory.h  ALStaticBuffer.h  ALStreamingBuffer.h  Sound.h  SoundDevice.h  SoundFactory.h  SoundResourceManager.hpp  StaticBuffer.h  StreamingBuffer.h
MAPIL/Code/Include/MAPIL/Thread/: POSIXThread.h  Thread.h  ThreadFactory.h  WinAPIMutex.h  WinAPIThread.h
MAPIL/Code/Include/MAPIL/Util/: Allocator.hpp  CInterface.h  COMPointer.hpp  CPU.h  Color.hpp  Device.h  FPSManager.h  FontFormat.h  HeapAllocator.hpp  MapilObject.h  MapilSharedPointer.hpp  Memory.hpp  ResourceManager.hpp  SharedPointer.hpp  Singleton.hpp  String.h
MAPIL/Code/Src/Algorithm/: Caesar.cpp  LZ.cpp  XOR.cpp
MAPIL/Code/Src/Diag/: Exception.cpp  Logger.cpp  MapilException.cpp
MAPIL/Code/Src/GUI/: ButtonPressSignal.cpp  ButtonPushedSignal.cpp  Control.cpp  ExposeSignal.cpp  GLContext.cpp  GLModel.cpp  GTKGLContext.cpp  GTKGLWindow.cpp  GTKGraphicsContext.cpp  GTKSignalServer.cpp  GTKWindow.cpp  GUIDevice.cpp  GUIFactory.cpp  GraphicsContext.cpp  KeyboardSignal.cpp  Model.cpp  Painting.cpp  RadioButton.cpp  Signal.cpp  SignalServer.cpp  SizeAllocSignal.cpp  Widget.cpp  WinAPIGLContext.cpp  WinAPIGUIFactory.cpp  WinAPIGraphicsContext.cpp  WinAPIMsgProc.cpp  WinAPIRadioButton.cpp  WinAPISignalServer.cpp  WinAPIWindow.cpp  Window.cpp
MAPIL/Code/Src/Graphics/: Camera.cpp  Canvas2D.cpp  Canvas2DBatch.cpp  Canvas3D.cpp  Circle2D.cpp  D3D10GraphicsController.cpp  D3D10GraphicsFactory.cpp  D3D10Rectangle3D.cpp  D3D10Shader.cpp  D3DAnimModel.cpp  D3DCamera.cpp  D3DCanvas2D.cpp  D3DCanvas3D.cpp  D3DDirectionalLight.cpp  D3DGraphicsController.cpp  D3DGraphicsFactory.cpp  D3DGraphicsFont.cpp  D3DLine2D.cpp  D3DModel.cpp  D3DNSidedPolygon3D.cpp  D3DPointLight.cpp  D3DPointSprite.cpp  D3DRectangle3D.cpp  D3DSkinMeshModel.cpp  D3DSprite.cpp  D3DTexture.cpp  DirectionalLight.cpp  Frontend.cpp  GLCamera.cpp  GLCanvas2D.cpp  GLCanvas3D.cpp  GLCircle2D.cpp  GLDirectionalLight.cpp  GLGraphicsController.cpp  GLGraphicsFactory.cpp  GLGraphicsFont.cpp  GLLine2D.cpp  GLModel.cpp  GLPointLight.cpp  GLPointSprite.cpp  (+24 more)
MAPIL/Code/Src/IO/: Archiver.cpp  BMPFile.cpp  Console.cpp  File.cpp  FileFormatAnalyzer.cpp  FontFile.cpp  IO.cpp  IO.h  ISocket.cpp  ISocketFactory.cpp  ImageFile.cpp  LinuxSocket.cpp  LinuxSocket.h  MQOFile.cpp  ModelFile.cpp  PNGFile.cpp  Socket.cpp  Socket.h  SocketFactory.cpp  SoundFile.cpp  TTFFile.cpp  WAVFile.cpp  XAnimFile.cpp  XFile.cpp
MAPIL/Code/Src/Input/: DIGamepad.cpp  DIInputFactory.cpp  DIKeyboard.cpp  DIMouse.cpp  Input.cpp  InputDevice.cpp  InputFactory.cpp  Mouse.cpp  WinAPIInputFactory.cpp  WinAPIKeyboard.cpp  WinAPIMouse.cpp  keyboard.cpp
MAPIL/Code/Src/Math/: CollisionDetection.cpp  Matrix.cpp
MAPIL/Code/Src/Sound/: ALListener3D.cpp  ALSASoundDevice.cpp  ALSAStaticBuffer.cpp  ALSoundDevice.cpp  ALSoundFactory.cpp  ALStaticBuffer.cpp  ALStreamingBuffer.cpp  Sound.cpp  SoundDevice.cpp  SoundFactory.cpp  StaticBuffer.cpp  StreamingBuffer.cpp
MAPIL/Code/Src/Thread/: POSIXThread.cpp  Thread.cpp  ThreadFactory.cpp  WinAPIMutex.cpp  WinAPIThread.cpp
MAPIL/Code/Src/Util/: CInterface.cpp  CPU.cpp  Device.cpp  FPSManager.cpp  HeapAllocator.cpp  MapilObject.cpp  String.cpp
MAPIL/Doxygen/: DocDev.conf  DocRelease.conf
MAPIL/UML/: MAPIL.juth
MAPIL/Util/: CountSrcLine.pl  CreateAutomakeConf.pl  SVNDeleter.pl
