pkginclude_HEADERS =	mapil/cross_platform.h \
						mapil/tchar.h \
						mapil/type.h \
						mapil/Collections/RingBuffer.hpp \
						mapil/diag/exception.h \
						mapil/diag/mapil_exception.h \
						mapil/io/ISocketFactory.h \
						mapil/io/i_socket.h \
						mapil/io/socket_factory.h \
						mapil/sound/static_buffer.h \
						mapil/sound/streaming_buffer.h \
						mapil/thread/POSIXThread.h \
						mapil/thread/Thread.h \
						mapil/thread/ThreadFactory.h \
						mapil/util/mapil_object.h \
						mapil/util/memory.hpp
