AM_CPPFLAGS = @GTK_CFLAGS@
AM_LOADD = @GTK_LIBS@ -framework OpenAL
nobase_include_HEADERS = \
	../Include/MAPIL/CrossPlatform.h \
	../Include/MAPIL/MAPIL.h \
	../Include/MAPIL/TChar.h \
	../Include/MAPIL/Type.h \
	../Include/MAPIL/Algorithm/Caesar.h \
	../Include/MAPIL/Algorithm/LZ.h \
	../Include/MAPIL/Algorithm/XOR.h \
	../Include/MAPIL/Collection/RingBuffer.hpp \
	../Include/MAPIL/Diag/Assertion.hpp \
	../Include/MAPIL/Diag/Exception.h \
	../Include/MAPIL/Diag/MapilException.h \
	../Include/MAPIL/Diag/SafeArray.hpp \
	../Include/MAPIL/Graphics/Camera.h \
	../Include/MAPIL/Graphics/Canvas2D.h \
	../Include/MAPIL/Graphics/Canvas2DBatch.h \
	../Include/MAPIL/Graphics/Canvas3D.h \
	../Include/MAPIL/Graphics/Circle2D.h \
	../Include/MAPIL/Graphics/ConstNums.h \
	../Include/MAPIL/Graphics/D3D10GraphicsController.h \
	../Include/MAPIL/Graphics/D3D10GraphicsFactory.h \
	../Include/MAPIL/Graphics/D3D10Rectangle3D.h \
	../Include/MAPIL/Graphics/D3D10Shader.h \
	../Include/MAPIL/Graphics/D3DCamera.h \
	../Include/MAPIL/Graphics/D3DCanvas2D.h \
	../Include/MAPIL/Graphics/D3DCanvas3D.h \
	../Include/MAPIL/Graphics/D3DDirectionalLight.h \
	../Include/MAPIL/Graphics/D3DGraphicsController.h \
	../Include/MAPIL/Graphics/D3DGraphicsFactory.h \
	../Include/MAPIL/Graphics/D3DGraphicsFont.h \
	../Include/MAPIL/Graphics/D3DLine2D.h \
	../Include/MAPIL/Graphics/D3DModel.h \
	../Include/MAPIL/Graphics/D3DNSidedPolygon3D.h \
	../Include/MAPIL/Graphics/D3DPointLight.h \
	../Include/MAPIL/Graphics/D3DPointSprite.h \
	../Include/MAPIL/Graphics/D3DRectangle3D.h \
	../Include/MAPIL/Graphics/D3DSprite.h \
	../Include/MAPIL/Graphics/D3DTexture.h \
	../Include/MAPIL/Graphics/DeviceGraphicsResourceManager.hpp \
	../Include/MAPIL/Graphics/DirectionalLight.h \
	../Include/MAPIL/Graphics/Frontend.h \
	../Include/MAPIL/Graphics/GLCamera.h \
	../Include/MAPIL/Graphics/GLCanvas2D.h \
	../Include/MAPIL/Graphics/GLCanvas3D.h \
	../Include/MAPIL/Graphics/GLCircle2D.h \
	../Include/MAPIL/Graphics/GLDirectionalLight.h \
	../Include/MAPIL/Graphics/GLGraphicsController.h \
	../Include/MAPIL/Graphics/GLGraphicsFactory.h \
	../Include/MAPIL/Graphics/GLGraphicsFont.h \
	../Include/MAPIL/Graphics/GLLine2D.h \
	../Include/MAPIL/Graphics/GLModel.h \
	../Include/MAPIL/Graphics/GLNSidedPolygon3D.hpp \
	../Include/MAPIL/Graphics/GLPointLight.h \
	../Include/MAPIL/Graphics/GLPointSprite.h \
	../Include/MAPIL/Graphics/GLRectangle2D.h \
	../Include/MAPIL/Graphics/GLRectangle3D.h \
	../Include/MAPIL/Graphics/GLSprite.h \
	../Include/MAPIL/Graphics/GLTexture.h \
	../Include/MAPIL/Graphics/Graphics.h \
	../Include/MAPIL/Graphics/GraphicsController.h \
	../Include/MAPIL/Graphics/GraphicsDevice.h \
	../Include/MAPIL/Graphics/GraphicsFactory.h \
	../Include/MAPIL/Graphics/GraphicsFont.h \
	../Include/MAPIL/Graphics/GraphicsResourceManager.hpp \
	../Include/MAPIL/Graphics/Light.h \
	../Include/MAPIL/Graphics/Line2D.h \
	../Include/MAPIL/Graphics/Model.h \
	../Include/MAPIL/Graphics/NSidedPolygon3D.h \
	../Include/MAPIL/Graphics/NSidedPolygon3D.hpp \
	../Include/MAPIL/Graphics/PointLight.h \
	../Include/MAPIL/Graphics/PointSprite.h \
	../Include/MAPIL/Graphics/Polygon3D.h \
	../Include/MAPIL/Graphics/Rectangle2D.h \
	../Include/MAPIL/Graphics/Rectangle3D.h \
	../Include/MAPIL/Graphics/Shader.h \
	../Include/MAPIL/Graphics/Shape.h \
	../Include/MAPIL/Graphics/Shape2D.h \
	../Include/MAPIL/Graphics/Sprite.h \
	../Include/MAPIL/Graphics/SpriteBatch.h \
	../Include/MAPIL/Graphics/Texture.h \
	../Include/MAPIL/GUI/ButtonPressSignal.h \
	../Include/MAPIL/GUI/ButtonPushedSignal.h \
	../Include/MAPIL/GUI/Control.h \
	../Include/MAPIL/GUI/ExposeSignal.h \
	../Include/MAPIL/GUI/GLContext.h \
	../Include/MAPIL/GUI/GraphicsContext.h \
	../Include/MAPIL/GUI/GTKGLContext.h \
	../Include/MAPIL/GUI/GTKGLWindow.h \
	../Include/MAPIL/GUI/GTKGraphicsContext.h \
	../Include/MAPIL/GUI/GTKSignalServer.h \
	../Include/MAPIL/GUI/GTKWindow.h \
	../Include/MAPIL/GUI/GUIDevice.h \
	../Include/MAPIL/GUI/GUIFactory.h \
	../Include/MAPIL/GUI/GUIResourceManager.hpp \
	../Include/MAPIL/GUI/KeyboardSignal.h \
	../Include/MAPIL/GUI/RadioButton.h \
	../Include/MAPIL/GUI/Signal.h \
	../Include/MAPIL/GUI/SignalServer.h \
	../Include/MAPIL/GUI/SizeAllocSignal.h \
	../Include/MAPIL/GUI/Widget.h \
	../Include/MAPIL/GUI/WinAPIGLContext.h \
	../Include/MAPIL/GUI/WinAPIGraphicsContext.h \
	../Include/MAPIL/GUI/WinAPIGUIFactory.h \
	../Include/MAPIL/GUI/WinAPIMsgProc.h \
	../Include/MAPIL/GUI/WinAPIRadioButton.h \
	../Include/MAPIL/GUI/WinAPISignalServer.h \
	../Include/MAPIL/GUI/WinAPIWindow.h \
	../Include/MAPIL/GUI/Window.h \
	../Include/MAPIL/Input/ConstNums.h \
	../Include/MAPIL/Input/DIGamepad.h \
	../Include/MAPIL/Input/DIInputFactory.h \
	../Include/MAPIL/Input/DIKeyboard.h \
	../Include/MAPIL/Input/DIMouse.h \
	../Include/MAPIL/Input/Input.h \
	../Include/MAPIL/Input/InputDevice.h \
	../Include/MAPIL/Input/InputFactory.h \
	../Include/MAPIL/Input/InputResourceManager.hpp \
	../Include/MAPIL/Input/Keyboard.h \
	../Include/MAPIL/Input/Mouse.h \
	../Include/MAPIL/Input/WinAPIInputFactory.h \
	../Include/MAPIL/Input/WinAPIKeyboard.h \
	../Include/MAPIL/Input/WinAPIMouse.h \
	../Include/MAPIL/IO/Archiver.h \
	../Include/MAPIL/IO/BMPFile.h \
	../Include/MAPIL/IO/Console.h \
	../Include/MAPIL/IO/File.h \
	../Include/MAPIL/IO/FileFormatAnalyzer.h \
	../Include/MAPIL/IO/FontFile.h \
	../Include/MAPIL/IO/ImageFile.h \
	../Include/MAPIL/IO/ISocket.h \
	../Include/MAPIL/IO/ISocketFactory.h \
	../Include/MAPIL/IO/ModelFile.h \
	../Include/MAPIL/IO/MQOFile.h \
	../Include/MAPIL/IO/PNGFile.h \
	../Include/MAPIL/IO/SocketFactory.h \
	../Include/MAPIL/IO/SoundFile.h \
	../Include/MAPIL/IO/TTFFile.h \
	../Include/MAPIL/IO/WAVFile.h \
	../Include/MAPIL/IO/XFile.h \
	../Include/MAPIL/Math/CollisionDetection.h \
	../Include/MAPIL/Math/Matrix.hpp \
	../Include/MAPIL/Math/Point.hpp \
	../Include/MAPIL/Math/Transformation.hpp \
	../Include/MAPIL/Math/Vector.hpp \
	../Include/MAPIL/Sound/ALListener3D.h \
	../Include/MAPIL/Sound/ALSASoundDevice.h \
	../Include/MAPIL/Sound/ALSAStaticBuffer.h \
	../Include/MAPIL/Sound/ALSoundDevice.h \
	../Include/MAPIL/Sound/ALSoundFactory.h \
	../Include/MAPIL/Sound/ALStaticBuffer.h \
	../Include/MAPIL/Sound/ALStreamingBuffer.h \
	../Include/MAPIL/Sound/Sound.h \
	../Include/MAPIL/Sound/SoundDevice.h \
	../Include/MAPIL/Sound/SoundFactory.h \
	../Include/MAPIL/Sound/SoundResourceManager.hpp \
	../Include/MAPIL/Sound/StaticBuffer.h \
	../Include/MAPIL/Sound/StreamingBuffer.h \
	../Include/MAPIL/Thread/POSIXThread.h \
	../Include/MAPIL/Thread/Thread.h \
	../Include/MAPIL/Thread/ThreadFactory.h \
	../Include/MAPIL/Thread/WinAPIThread.h \
	../Include/MAPIL/Util/Allocator.hpp \
	../Include/MAPIL/Util/CInterface.h \
	../Include/MAPIL/Util/Color.hpp \
	../Include/MAPIL/Util/COMPointer.hpp \
	../Include/MAPIL/Util/CPU.h \
	../Include/MAPIL/Util/FontFormat.h \
	../Include/MAPIL/Util/FPSManager.h \
	../Include/MAPIL/Util/HeapAllocator.hpp \
	../Include/MAPIL/Util/MapilObject.h \
	../Include/MAPIL/Util/MapilSharedPointer.hpp \
	../Include/MAPIL/Util/Memory.hpp \
	../Include/MAPIL/Util/ResourceManager.hpp \
	../Include/MAPIL/Util/SharedPointer.hpp \
	../Include/MAPIL/Util/Singleton.hpp \
	../Include/MAPIL/Util/String.h
lib_LIBRARIES = libmapil.a
libmapil_a_SOURCES = \
	../Src/Algorithm/Caesar.cpp \
	../Src/Algorithm/LZ.cpp \
	../Src/Algorithm/XOR.cpp \
	../Src/Diag/Exception.cpp \
	../Src/Diag/MapilException.cpp \
	../Src/Graphics/Camera.cpp \
	../Src/Graphics/Canvas2D.cpp \
	../Src/Graphics/Canvas2DBatch.cpp \
	../Src/Graphics/Canvas3D.cpp \
	../Src/Graphics/Circle2D.cpp \
	../Src/Graphics/D3D10GraphicsController.cpp \
	../Src/Graphics/D3D10GraphicsFactory.cpp \
	../Src/Graphics/D3D10Rectangle3D.cpp \
	../Src/Graphics/D3D10Shader.cpp \
	../Src/Graphics/D3DCamera.cpp \
	../Src/Graphics/D3DCanvas2D.cpp \
	../Src/Graphics/D3DCanvas3D.cpp \
	../Src/Graphics/D3DDirectionalLight.cpp \
	../Src/Graphics/D3DGraphicsController.cpp \
	../Src/Graphics/D3DGraphicsFactory.cpp \
	../Src/Graphics/D3DGraphicsFont.cpp \
	../Src/Graphics/D3DLine2D.cpp \
	../Src/Graphics/D3DModel.cpp \
	../Src/Graphics/D3DNSidedPolygon3D.cpp \
	../Src/Graphics/D3DPointLight.cpp \
	../Src/Graphics/D3DPointSprite.cpp \
	../Src/Graphics/D3DRectangle3D.cpp \
	../Src/Graphics/D3DSprite.cpp \
	../Src/Graphics/D3DTexture.cpp \
	../Src/Graphics/DirectionalLight.cpp \
	../Src/Graphics/Frontend.cpp \
	../Src/Graphics/GLCamera.cpp \
	../Src/Graphics/GLCanvas2D.cpp \
	../Src/Graphics/GLCanvas3D.cpp \
	../Src/Graphics/GLCircle2D.cpp \
	../Src/Graphics/GLDirectionalLight.cpp \
	../Src/Graphics/GLGraphicsController.cpp \
	../Src/Graphics/GLGraphicsFactory.cpp \
	../Src/Graphics/GLGraphicsFont.cpp \
	../Src/Graphics/GLLine2D.cpp \
	../Src/Graphics/GLPointLight.cpp \
	../Src/Graphics/GLPointSprite.cpp \
	../Src/Graphics/GLRectangle2D.cpp \
	../Src/Graphics/GLRectangle3D.cpp \
	../Src/Graphics/GLSprite.cpp \
	../Src/Graphics/GLTexture.cpp \
	../Src/Graphics/Graphics.cpp \
	../Src/Graphics/GraphicsController.cpp \
	../Src/Graphics/GraphicsDevice.cpp \
	../Src/Graphics/GraphicsFactory.cpp \
	../Src/Graphics/GraphicsFont.cpp \
	../Src/Graphics/Light.cpp \
	../Src/Graphics/Line2D.cpp \
	../Src/Graphics/NSidedPolygon3D.cpp \
	../Src/Graphics/PointLight.cpp \
	../Src/Graphics/PointSprite.cpp \
	../Src/Graphics/Polygon3D.cpp \
	../Src/Graphics/Rectangle2D.cpp \
	../Src/Graphics/Rectangle3D.cpp \
	../Src/Graphics/Shader.cpp \
	../Src/Graphics/Shape.cpp \
	../Src/Graphics/Shape2D.cpp \
	../Src/Graphics/Sprite.cpp \
	../Src/Graphics/SpriteBatch.cpp \
	../Src/Graphics/Texture.cpp \
	../Src/GUI/ButtonPressSignal.cpp \
	../Src/GUI/ButtonPushedSignal.cpp \
	../Src/GUI/Control.cpp \
	../Src/GUI/ExposeSignal.cpp \
	../Src/GUI/GLContext.cpp \
	../Src/GUI/GLModel.cpp \
	../Src/GUI/GraphicsContext.cpp \
	../Src/GUI/GTKGLContext.cpp \
	../Src/GUI/GTKGLWindow.cpp \
	../Src/GUI/GTKGraphicsContext.cpp \
	../Src/GUI/GTKSignalServer.cpp \
	../Src/GUI/GTKWindow.cpp \
	../Src/GUI/GUIDevice.cpp \
	../Src/GUI/GUIFactory.cpp \
	../Src/GUI/KeyboardSignal.cpp \
	../Src/GUI/Model.cpp \
	../Src/GUI/Painting.cpp \
	../Src/GUI/RadioButton.cpp \
	../Src/GUI/Signal.cpp \
	../Src/GUI/SignalServer.cpp \
	../Src/GUI/SizeAllocSignal.cpp \
	../Src/GUI/Widget.cpp \
	../Src/GUI/WinAPIGLContext.cpp \
	../Src/GUI/WinAPIGraphicsContext.cpp \
	../Src/GUI/WinAPIGUIFactory.cpp \
	../Src/GUI/WinAPIMsgProc.cpp \
	../Src/GUI/WinAPIRadioButton.cpp \
	../Src/GUI/WinAPISignalServer.cpp \
	../Src/GUI/WinAPIWindow.cpp \
	../Src/GUI/Window.cpp \
	../Src/Input/DIGamepad.cpp \
	../Src/Input/DIInputFactory.cpp \
	../Src/Input/DIKeyboard.cpp \
	../Src/Input/DIMouse.cpp \
	../Src/Input/Input.cpp \
	../Src/Input/InputDevice.cpp \
	../Src/Input/InputFactory.cpp \
	../Src/Input/keyboard.cpp \
	../Src/Input/Mouse.cpp \
	../Src/Input/WinAPIInputFactory.cpp \
	../Src/Input/WinAPIKeyboard.cpp \
	../Src/Input/WinAPIMouse.cpp \
	../Src/IO/Archiver.cpp \
	../Src/IO/BMPFile.cpp \
	../Src/IO/Console.cpp \
	../Src/IO/FileFormatAnalyzer.cpp \
	../Src/IO/FontFile.cpp \
	../Src/IO/ImageFile.cpp \
	../Src/IO/ISocket.cpp \
	../Src/IO/ISocketFactory.cpp \
	../Src/IO/LinuxSocket.cpp \
	../Src/IO/LinuxSocket.h \
	../Src/IO/ModelFile.cpp \
	../Src/IO/MQOFile.cpp \
	../Src/IO/PNGFile.cpp \
	../Src/IO/Socket.cpp \
	../Src/IO/Socket.h \
	../Src/IO/SocketFactory.cpp \
	../Src/IO/SoundFile.cpp \
	../Src/IO/TTFFile.cpp \
	../Src/IO/WAVFile.cpp \
	../Src/IO/XFile.cpp \
	../Src/Math/CollisionDetection.cpp \
	../Src/Sound/ALListener3D.cpp \
	../Src/Sound/ALSASoundDevice.cpp \
	../Src/Sound/ALSAStaticBuffer.cpp \
	../Src/Sound/ALSoundDevice.cpp \
	../Src/Sound/ALSoundFactory.cpp \
	../Src/Sound/ALStaticBuffer.cpp \
	../Src/Sound/ALStreamingBuffer.cpp \
	../Src/Sound/Sound.cpp \
	../Src/Sound/SoundDevice.cpp \
	../Src/Sound/SoundFactory.cpp \
	../Src/Sound/StaticBuffer.cpp \
	../Src/Sound/StreamingBuffer.cpp \
	../Src/Thread/POSIXThread.cpp \
	../Src/Thread/Thread.cpp \
	../Src/Thread/ThreadFactory.cpp \
	../Src/Thread/WinAPIThread.cpp \
	../Src/Util/CInterface.cpp \
	../Src/Util/CPU.cpp \
	../Src/Util/FPSManager.cpp \
	../Src/Util/HeapAllocator.cpp \
	../Src/Util/MapilObject.cpp \
	../Src/Util/String.cpp 

